test_case/rust-lang_rust/35789_240912220_1.rs

error[E0133]: call to unsafe function requires unsafe function or block
  --> src/test/compile-fail/E0133.rs:14:5
   |
14 |     f(); //~ ERROR E0133
   |     ^^^ call to unsafe function

error: aborting due to previous error
